<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="60dp"
    tools:context="com.example.tengyu.lifeholder.EditActivity"
    tools:showIn="@layout/activity_edit">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/colorWhite"
        card_view:cardCornerRadius="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        card_view:cardElevation="6dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/themeLight"
                android:orientation="vertical">
                <TextView
                    android:text="@string/action_edit_general"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorControlHolylight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <TextView
                    android:text="@string/action_edit_general_title"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"/>
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/tomatotask_edit_title"
                    android:hint="@string/action_edit_general_titleHint"
                    android:maxLines="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <TextView
                    android:text="@string/action_edit_general_priority"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"/>
                <RadioGroup
                    android:id="@+id/tomatotask_edit_levGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/tomatotask_edit_lev1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_edit_general_priority1"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/themeLight"/>
                    <RadioButton
                        android:id="@+id/tomatotask_edit_lev2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_edit_general_priority2"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/theme"/>
                    <RadioButton
                        android:id="@+id/tomatotask_edit_lev3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_edit_general_priority3"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/themeDark"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <TextView
                    android:text="@string/action_edit_general_remind"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"/>

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/tomatotask_edit_ifRemind"
                    style="@style/SwitchButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    app:kswTintColor="@color/themeLight"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/colorWhite"
        card_view:cardCornerRadius="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        card_view:cardElevation="6dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorControlHolylight"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center">
            <TextView
                android:text="@string/action_edit_tomato1"
                android:textColor="@color/themeHolyLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"/>
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_object_tomato_fulltheme"/>
            <TextView
                android:text="@string/action_edit_tomato2"
                android:textColor="@color/themeHolyLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="24sp"/>
             <TextView
                 android:id="@+id/tomatotask_edit_tomatoIndex"
                 android:text="7"
                 android:textColor="@color/themeLight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"/>
            </LinearLayout>
        </LinearLayout>
            <com.appyvet.rangebar.RangeBar
                android:id="@+id/tomatotask_edit_rangebar"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                custom:rangeBar="false"
                custom:tickStart="1"
                custom:tickInterval="1"
                custom:tickEnd="7"
                custom:temporaryPins="true"
                custom:pinMaxFont="12sp"
                custom:tickColor="@color/themeDark"
                custom:selectorColor="@color/theme"
                custom:selectorSize="8dp"
                custom:connectingLineColor="@color/themeLight"
                custom:pinColor="@color/themeLight"
                custom:rangeBarColor="@color/themeHolyLight"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/action_edit_min_tomato"
                    android:layout_marginLeft="14dp" />

                <TextView
                    android:id="@+id/title_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/action_edit_title_time"
                    android:layout_marginLeft="14dp" />

                <TextView
                    android:id="@+id/end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/action_edit_max_tomato"
                    android:layout_marginRight="14dp"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/colorWhite"
        card_view:cardCornerRadius="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        card_view:cardElevation="6dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorControlHolylight"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_object_clock"/>
                    <TextView
                        android:text="@string/action_edit_deadline"
                        android:textColor="@color/themeHolyLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="24sp"/>
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">
                    <TextView
                        android:id="@+id/tomatotask_edit_deadline"
                        android:text="2016-12-31"
                        android:textColor="@color/themeHolyLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"/>
                    <TextView
                        android:id="@+id/tomatotask_edit_deadline2"
                        android:text="24:00"
                        android:textColor="@color/themeHolyLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>
                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/tomatotask_edit_deadlinebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="5dp"
                    app:fabSize="mini"
                    android:layout_alignParentRight="true"
                    app:backgroundTint="@color/themeLight"
                    android:src="@drawable/ic_action_edit"
                    />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
