<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    tools:context="com.example.tengyu.lifeholder.CountActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tomatotask_count_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/action_count_task"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">
        <include layout="@layout/content_count" />
         <TextView
                android:id="@+id/tomatotask_count_title"
                android:padding="16dp"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:scrollHorizontally="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"/>
         <include layout="@layout/divider"/>
    </LinearLayout>


    <com.dd.CircularProgressButton
        android:id="@+id/tomatotask_count_fightbtn"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cpb_textIdle="@string/action_Fight"
        app:cpb_selectorIdle="@drawable/idle_selector"
        app:cpb_selectorComplete="@drawable/complete_selector"
        app:cpb_iconComplete="@drawable/ic_action_accept"
        app:cpb_textError="@string/action_Fighting"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_action_important"
        app:backgroundTint="@color/themeLight"/>

</android.support.design.widget.CoordinatorLayout>
